Basic code cleanup